# experiment

./: .gitignore  LICENSE  README.md
arduino/_blink_and_serial_comm/: platformio.ini
arduino/_blink_and_serial_comm/src/: main.ino
arduino/_libraries/: NRF24L01.txt
arduino/adafruit_gps/: platformio.ini
arduino/adafruit_gps/src/: leo_parsing.ino
arduino/esp8266_udp_to_serial/: platformio.ini
arduino/radio/: Comm.cpp  Comm.h  RadioComm.cpp  RadioComm.h
arduino/radio_test/: radio_test.ino
arduino/serial_pwm_motor_controller/: platformio.ini
arduino/servo_test/: servo_test.ino
arduino/urm37_v4/: urm37_v4.ino
cpp/console/: Makefile
cpp/data_structure/: byref_obj.cpp  struct02.cpp  update_array.cpp
cpp/enum/: main
cpp/hello/: Makefile
cpp/radio/transposer/: Makefile
cpp/serial/: Makefile  main.cpp
cpp/struct/: main
js/: class_test.js  path_test.js
js_class_test/: inherit_override.js  private_functions.js
language-based/js/: class_test.js  path_test.js  private_variables.js
language-based/matlab/: DCM_EarthToBody.m
libraries-based/opencv/: cmake_command_for_building.txt
libraries-based/opencv/motion_detection/advance/: CMakeLists.txt
libraries-based/opencv/motion_detection/advance/cmake/: functions.cmake
libraries-based/opencv/motion_detection/advance/sample/: config.yaml
libraries-based/opencv/motion_detection/advance/src/: CMakeLists.txt  main.cpp  md_config.hpp.in
matlab/: fft.m
py/: asyncio-forever-loop.py  asyncio-parallel-tasks.py  rename.py  rename_2.py  test_pool.py  test_pool_w_init.py  videos_convert.py
(+42 files in other folders)
